--- a/pit_app/templates/home/index.html
+++ b/pit_app/templates/home/index.html
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="intro-message">
-          <h1>PIT-DB</h1>
+          <h1>PITDB</h1>
           <h3>A Resource for Sharing, Annotating and Analysing Translated Genomic Elements</h3>
         </div>
       </div>
@@ -20,15 +20,15 @@
   <div class="container" id="about">
     <div class="row">
       <div>
-        <h2 class="section-heading">About PIT-DB</h2>
+        <h2 class="section-heading">About PITDB</h2>
         <hr class="section-heading-spacer">
         <div class="clearfix"></div>
-        <p class="lead">PIT-DB is a publicly available database for sharing of results from PIT (proteomics informed by transcriptomics) experiments. PIT [<a href="#ref1">1</a>] involves the analysis of a given sample by both RNA-seq and proteomic mass spectrometry followed by integration of the acquired data to provide an unprecedented level of information about which genomic elements are being transcribed and translated within a given sample, even if the organism under study does not have an annotated genome. Observed translated genomic elements (TGEs) are BLASTed against reference proteomes using a published workflow [<a href="#ref2">2</a>] to determine whether they are known proteins, protein variants or novel gene products. </p>
+        <p class="lead">PITDB is a publicly available database for sharing of results from PIT (proteomics informed by transcriptomics) experiments. PIT [<a href="#ref1">1</a>] involves the analysis of a given sample by both RNA-seq and proteomic mass spectrometry followed by integration of the acquired data to provide an unprecedented level of information about which genomic elements are being transcribed and translated within a given sample, even if the organism under study does not have an annotated genome. Observed translated genomic elements (TGEs) are BLASTed against reference proteomes using a published workflow [<a href="#ref2">2</a>] to determine whether they are known proteins, protein variants or novel gene products. </p>
 
         <h2 class="section-heading" style="padding-top: 30px">Database Statistics</h2>
         <hr class="section-heading-spacer" style="width: 280px">
         <div class="clearfix"></div>
-        As of June 2016, the PIT-DB data consist of:<br/><br/>
+        As of June 2016, the PITDB data consist of:<br/><br/>
         <!-- <div class="giant-number-block col-xs-3">
           <span class="giant-number">{{ expNum }} </span>
           <span class="text-muted">experiments</span>
