--- a/pit_app/templates/results/experiment.html
+++ b/pit_app/templates/results/experiment.html
@@ -25,6 +25,7 @@
     	<div class="panel panel-default" id="expSummary">
         <div class="panel-heading">
           <i class="fa fa-comment-o fa-fw"></i> Summary
+          <a class="btn pull-right popoverData" href="#" data-content="Summary of information derived from this experiment." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
         <div class="panel-body">
@@ -41,6 +42,7 @@
       <div class="panel panel-default" id="expSummary">
         <div class="panel-heading">
           <i class="fa fa-info" style="margin-left: 8px; padding-right:5px"></i> Description
+          <a class="btn pull-right popoverData" href="#" data-content="A brief summary of the experimental conditions. For more detailed information, see the associated publication." rel="popover" data-placement="left" data-original-title="Experiment Description" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
         <div class="panel-body">
@@ -51,6 +53,7 @@
       <div id="expGraph" class="panel panel-default sunburst" style="position: relative !important;">
         <div class="panel-heading">
           <i class="fa fa-pie-chart fa-fw"></i> Graph
+          <a class="btn pull-right popoverData" href="#" data-content="Visual summary of the TGEs identified, together with their type and information about their supporting peptides. Move the mouse cursor over the plot for quantitative information." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
         <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of experiment breakdown</h5></p></span>
@@ -68,6 +71,7 @@
       <div class="panel panel-default" id="expBreakdown">
         <div class="panel-heading">
             <i class="fa fa-table fa-fw"></i> Experiment breakdown
+            <a class="btn pull-right popoverData" href="#" data-content="Information about the samples analysed within the experiment." rel="popover" data-placement="left" data-original-title="Experiment Breakdown" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
         <div class="panel-body">
