--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -24,6 +24,7 @@
     	<div id="orgSummary" class="panel panel-default" style="position: relative !important;">
         <div class="panel-heading">
           <i class="fa fa-bar-chart-o fa-fw"></i> Summary
+          <a class="btn pull-right popoverData" href="#" data-content="Summary of everything the database knows about this particular species." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
         <div class="panel-body">
@@ -41,6 +42,7 @@
       <div id="orgGraph" class="panel panel-default sunburst" style="position: relative !important;">
         <div class="panel-heading">
           <i class="fa fa-pie-chart fa-fw"></i> Graph
+          <a class="btn pull-right popoverData" href="#" data-content="Visual summary of the experimentally observed TGEs and peptides for this species. Move the mouse cursor over the plot for quantitative information." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
 
         <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of organism breakdown</h5></p></span>
@@ -59,6 +61,7 @@
       	<div class="panel panel-default" id="orgBreakdown">
           <div class="panel-heading">
             <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
+            <a class="btn pull-right popoverData" href="#" data-content="List of experimentally TGEs that have been observed in this species." rel="popover" data-placement="left" data-original-title="Translated Genomic Elements (TGEs)" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
           
           <div class="panel-body">
